Add source encoding to POM file
Change-Id: Ibc977f0383fe654296e9daa738f95d5b55f2c4a1

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,4 +11,8 @@
     <name>parent</name>
     <description>This project contains the parent POM for all code2bytes.org Maven modules.</description>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
