Include resources plugin in plugin management
Change-Id: I3331660ca1707bd05fdddaf0d5b02f348253eda9

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -26,6 +26,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.0.2</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
