--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -27,6 +27,10 @@
                     <version>3.7.0</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.0.2</version>
                 </plugin>
